[package]
name = "chat-server-rust"
version = "0.1.0"
authors = ["Sean Behan <codebam@riseup.net>"]
edition = "2018"

[dependencies]
async-std = "0.99"
futures-preview = { version = "0.3.0-alpha", features = [ "async-await", "nightly" ] }
futures-channel = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
